# Ky

./: settings.gradle.kts
.github/workflows/: main.yml
app/: build.gradle.kts  build.gradle.kts.save
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/assets/realsr/models/: resrgan_srvggx1_d2u2_1024.mnn  resrgan_srvggx1_d4u4_1024.mnn
app/src/main/cpp/: CMakeLists.txt  MnnVideoBridge.cpp  NcnnVideoBridge.cpp  OpenCvBridge.cpp  native-lib.cpp  realsr.cpp
app/src/main/java/com/d4nzxml/kythera/: MainActivity.kt
app/src/main/java/com/d4nzxml/kythera/service/: CctvService.kt  EnhanceNative.java  FfmpegService.kt  GalleryService.kt  IntelManager.kt  MnnVideoBridge.kt  NcnnVideoBridge.kt  OpenCvBridge.kt  RealSrEngine.kt
app/src/main/java/com/d4nzxml/kythera/ui/screen/: CompressScreen.kt  ConverterScreen.kt  DashboardScreen.kt  EnhanceScreen.kt  OtherScreens.kt  PatchScreen.kt  ProfileScreen.kt  TelegramAuthScreen.kt  TikTokLoginScreen.kt  TikTokScreen.kt  VideoEnhanceScreen.kt
app/src/main/java/com/d4nzxml/kythera/ui/theme/: Theme.kt
app/src/main/res/values/: themes.xml
gradle/: libs.versions.toml
